--- a/master.ipynb
+++ b/master.ipynb
@@ -1771,6 +1771,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## **Responses to Peer-review**\n",
+    "\n",
+    "1. \"In the 2nd item, 1st subitem, they state the text does not mention the MLP, but actually it is in the first paragraph of 4th page. It also explicitly shown in the equation 4.\"\n",
+    "\n",
+    "    \tWhile it is correct that the MLP is mentioned in the first paragraph of the fourth page, our concern is about the explicit mention and description of the MLP layer within the Transformer Decoder block, as this is where we identified a discrepancy between the text and the visual representation. The visual representation (Figure 1.) clearly shows the inclusion of the MLP layer and residual connections following the self-attention mechanism within the Transformer Decoder block. However, the textual description of the Transformer Decoder in the relevant sections does not explicitly detail the presence and role of the MLP layer within this part of the module.\n",
+    "\n",
+    "<div>\n",
+    "\n",
+    "2. \"In the 2nd item 2nd subitem, they mentioned linear projection but, we could not find anything about it in the paper.\"\n",
+    "\n",
+    "\t\tThe linear projection is depicted in the image (Figure 1.) within the Transformer Decoder block. It is represented by the symbol “L” in the visual diagram.\n",
+    "\n",
+    "<div>\n",
+    "\n",
+    "3.  \"We have checked the hyperparameters in the notebookand the hyperparameters provided in the paper, Implementation Details section. The hyperparameters provided in the paper seems used correct in the notebook. But some hyperparameters in the notebook are not explicitly mentioned in the paper, which are input resolution, and mlp_ratio. Note that both are related with StyleTransformer, and the authors of the notebook  mentioned the training results seems correct without StyleTransformer. Thus, the selection of these hyperparameters might be \n",
+    "problematic.\"\n",
+    "\n",
+    "\t\tThe input resolution referred to in our implementation is the resolution of the output of the Encoder. This resolution determines the size of the feature maps that are fed into the StyleTransformer module. We conducted extensive experiments with various MLP ratio settings, ranging from 3 up to 10, to evaluate their impact on the overall training process. Our findings indicated that varying the MLP ratio did not significantly alter the overall training dynamics or the final performance of the model. These experiments and their results are detailed in the Challanges section.\n",
+    "\n",
+    "<div>\n",
+    "\n",
+    "4. \"In the implementation details section of the paper, it is mentioned that they first resized image and take random crop ONLY in training. And WikiArt dataset is also used as test style set. But in the implementation (get_dataloader.py file wikiart_dataset class), they resize and crop no matter whether it is used for training or test. Apart from that, data loaders seem implemented correctly.\"\n",
+    "\n",
+    "\t\tIn the provided implementation (specifically in the get_dataloader.py file, wikiart_dataset class), images are resized and cropped regardless of whether they are used for training or testing. This was done primarily for the ease of testing. Ensuring a consistent preprocessing pipeline simplifies the testing process and avoids potential discrepancies between training and testing phases. It is important to note that at test time, the algorithm should be capable of handling images at any resolution without performance degradation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **Citation**\n",
     "\n",
     "```\n",
